--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,14 +21,16 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 </head>
+
 <body>
 
     <section class="Navbar">
         <nav class="navbar navbar-expand-lg navbar-light bg-white  shadow-lg">
             <div class="container-fluid container">
                 <a class="navbar-brand h6" href="#">Creative <span class="text-primary">Agency</span> </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -36,20 +39,20 @@
                             <a class="nav-link active" aria-current="page" href="#home">Home</a>
                         </li>
                         <li class="nav-item px-2">
-                            <a class="nav-link"  aria-current="page" href="#about">About</a>
+                            <a class="nav-link" aria-current="page" href="#about">About</a>
                         </li>
                         <li class="nav-item px-2">
-                            <a class="nav-link"  aria-current="page" href="#services">Services</a>
+                            <a class="nav-link" aria-current="page" href="#services">Services</a>
                         </li>
                         <li class="nav-item px-2">
-                        <a class="nav-link"  aria-current="page" href="#news">News</a>
+                            <a class="nav-link" aria-current="page" href="#news">News</a>
                         </li>
                         <li class="nav-item px-2">
                             <a class="nav-link" id="#contact">Contact</a>
                         </li>
                     </ul>
                     <form class="d-flex">
-                       <a href=""class="rounded-pill btn btn-light border">Get a Quote</a>
+                        <a href="" class="rounded-pill btn btn-light border">Get a Quote</a>
                     </form>
                 </div>
             </div>
@@ -61,20 +64,140 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-12 p-5 flex-column justify-content-center">
-                   <h1 class="mb-5 opacity-75">Great Companys Are<br>
-                    buit on great product</h1>
+                    <h1 class="mb-5 opacity-75">Great Companys Are<br>
+                        buit on great product</h1>
 
-                    <p class="opacity-75">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat <br> eius impedit tempore eaque assumenda et, temporibus
-                    accusantium ab nulla provident!</p>
-                   <div class="py-2">
-                    <a class="btn btn-light border">More info</a>
-                    <a class="btn btn-primary border rounded-pill">Watch video <span><i class="fa-solid fa-circle-play"></i></span></a>
-                   </div>
+                    <p class="opacity-75">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat <br> eius
+                        impedit tempore eaque assumenda et, temporibus
+                        accusantium ab nulla provident!</p>
+                    <div class="py-2">
+                        <a class="btn btn-light border">More info</a>
+                        <a class="btn btn-primary border rounded-pill">Watch video <span><i
+                                    class="fa-solid fa-circle-play"></i></span></a>
+                    </div>
                 </div>
                 <div class="col-md-6 col-sm-12">
-                  <img src="images/bg_image_1.png" alt="">
+                    <img src="images/bg_image_1.png" alt="">
                 </div>
                 <hr>
+            </div>
+
+            
+            <div class="container">
+                <div class="row p-5">
+                    <div class="col-md-4 col-sm-12">
+                        <div class="card mb-3 border-0">
+                            <div class="row ">
+                                <div class="col-md-4 col-sm-12 border-white"><img class="img-s-5-border" src="images/shaps/icon_pattern.png" class="card-img" alt="...">
+                                </div>
+                                <div class="col-md-8 col-sm-12">
+                                    <div class="card-body">
+                                        <h5 class="opacity-75">Provide frinatial advice by our advicor</h5>
+                                        <p><small class="text-muted">Last updated 3 mins ago</small></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-12">
+                       <div class="card border-0 mb-3">
+                        <div class="row">
+                            <div class="col-md-4 col-sm-12 border-white">
+                                <img class="img-s-5-border" src="images/shaps/icon_pattern.png" class="card-img" alt="...">
+                            </div>
+                            <div class="col-md-8 col-sm-12">
+                                <div class="card-body">
+                                    <h5 class="opacity-75">Complate solution by our global organization</h5>
+                                    <p><small class="text-muted">Last updated 10 mins ago</small></p>
+                                </div>
+                            </div>
+                        </div>
+                       </div>
+                    </div>
+                    <div class="col-md-4 col-sm-12">
+                       <div class="card mb-3 border-0">
+                        <div class="row">
+                            <div class="col-md-4 col-sm-12 border-white">
+                            <img class="img-s-5-border" src="images/shaps/icon_pattern.png" class="card-img" alt="...">
+                            </div>
+                            <div class="col-md-8 col-sm-12">
+                               <div class="card-body">
+                                <h5 class="opacity-75">Provide frinatial advice by our advicor</h5>
+                                <p><small class="text-muted">Last updated 3 mins ago</small></p>
+                               </div>
+                            </div>
+                        </div>
+                       </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+        </div>
+    </section>
+
+
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-sm-12">
+                    <img src="images/bg_image_2.png" alt="">
+                </div>
+                <div class="col-md-6 col-sm-12 my-5 px-5">
+                <h1 class="opacity-75 py-5">We're <span class="text-primary">Dynamic</span> team of
+                Creative people</h1>
+                <p class="opacity-75">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat <br> eius
+                impedit tempore eaque assumenda et, temporibus
+                accusantium ab nulla provident!</p>
+                </div>
+            </div>
+            <hr>
+        </div>
+    </section>
+
+    <section id="services">
+        <div class="container">
+            <h2 class="text-center mt-5 p-3">Pricing Plan</h2>
+            <div class="row mt-4 row-cols-1 row-cols-md-3 g-4 mb-4">
+                
+                <div class="col">
+                    <div class="card h-100 text-center">
+                        <div class="card-body">
+                           <div class="card-icon fs-1 opacity-50"><i class="fa-solid fa-address-card"></i></div>
+                           <h4 class="opacity-75 py-2">MEMBERSHIP</h4>
+                           <h1 class="py-2"><sup class="opacity-75">$</sup>30<sub class="opacity-75">/Month</sub></h1>
+                        </div>
+                        <div class="card-text">
+                            <p class="text-muted py-3">Choose a right plan for you</p>
+                            <button class="btn btn-light rounded-pill border mb-3">Choose plan</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 text-center bg-primary">
+                        <div class="card-body">
+                            <div class="card-icon fs-1 opacity-50"><i class="fa-solid fa-language"></i></div>
+                            <h4 class="opacity-75 py-2 text-warning">DEDICATED</h4>
+                            <h1 class="py-2 text-white"><sup class="opacity-75">$</sup>60<sub class="opacity-75">/Month</sub></h1>
+                        </div>
+                        <div class="card-text">
+                            <p class="text-white py-3">Choose a right plan for you</p>
+                            <button class="btn btn-primary rounded-pill border mb-3">Choose plan</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 text-center">
+                        <div class="card-body">
+                            <div class="card-icon fs-1 opacity-50"><i class="fa-solid fa-audio-description"></i></div>
+                            <h4 class="opacity-75 py-2">PRIVATE</h4>
+                            <h1 class="py-2"><sup class="opacity-75">$</sup>90<sub class="opacity-75">/Month</sub></h1>
+                        </div>
+                        <div class="card-text">
+                            <p class="py-3 text-muted">Choose a right plan for you</p>
+                            <button class="btn btn-light rounded-pill border mb-3">Choose plan</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -82,4 +205,5 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
