--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 
 <body>
 
+    <!-- navbar -->
+
     <section class="Navbar">
         <nav class="navbar navbar-expand-lg navbar-light bg-white  shadow-lg">
-            <div class="container-fluid container">
+            <div class="container-fluid container sticky-top">
                 <a class="navbar-brand h6" href="#">Creative <span class="text-primary">Agency</span> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -59,6 +61,7 @@
         </nav>
     </section>
 
+<!-- home section -->
 
     <section id="home">
         <div class="container">
@@ -138,6 +141,7 @@
         </div>
     </section>
 
+<!-- about section -->
 
     <section id="about">
         <div class="container">
@@ -156,6 +160,8 @@
             <hr>
         </div>
     </section>
+
+<!-- services -->
 
     <section id="services">
         <div class="container">
@@ -205,6 +211,8 @@
             </div>
         </div>
     </section>
+
+<!-- news section -->
 
     <section id="news">
         <div class="container">
@@ -283,6 +291,8 @@
         </div>
     </section>
 
+    <!-- contact page -->
+
     <section id="contact">
         <div class="btn-light">
             <div class="text-center py-5">
@@ -322,6 +332,8 @@
             </div>
         </div>
     </section>
+
+    <!-- last page -->
 
     <section id="end">
             <div class="py-5 bg-dark text-center">
